# fast-api-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-validation.yaml
app/: __main__.py  db.py
app/api/routes/: api.py  completion.py  items.py
app/core/: config.py  events.py  paginator.py  security.py
app/models/: completion.py  items.py  log.py
app/services/: completion.py  items.py
tests/: test_api_items.py  test_config_and_errors.py  test_events_and_main.py  test_items_service.py  test_pagination_behavior.py  test_request_logging.py
